0.09 2013-01-31
	- Update year.
 	- Update comments.
        - Documentation tweaks.

0.08 2012-12-02
	- Fixed documentation.

0.07 2012-12-01
        - Fixed license information on CPAN.
	- Fixed Changes documentation.

0.06 2012-12-01
        - Bugfixing piwik_api.
	- Further tests for api and live testing.
	- Improvement of documentation.
	- Added MANIFEST.
	- Preparation for CPAN release.

0.05 2012-11-01
        - Bugfixing piwik_api.

0.04 2012-10-21
        - Updated piwik script tag for noscript option.

0.03 2012-10-02
        - Updated piwik script tag.

0.02 2012-07-16
        - Changed piwik to piwik_tag.
	- Added piwik_api helper.

0.01 2012-07-15
        - Initial submission to GitHub.