@@ -2,6 +2,7 @@ t/auth.pl
 blib
 log
 Sandbox
+sandbox
 public
 todo.org
 script*
