@@ -2,6 +2,7 @@
 	- Update year.
  	- Update comments.
         - Documentation tweaks.
+	- Started Tracking API.
 
 0.08 2012-12-02
 	- Fixed documentation.
